자자 이사갑니다

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -25,5 +25,5 @@ jobs:
         timeout: 60s
         script: |
           cd /usr/share/nginx/html
-          sudo git pull origin deploy
+          sudo git pull origin main
           
